Finish Razor Blog

--- a/Razor/Blog/Blog/Pages/Shared/_Layout.cshtml
+++ b/Razor/Blog/Blog/Pages/Shared/_Layout.cshtml
@@ -34,10 +34,9 @@
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">آموزش Razor Pages</h1>
+                <h1 class="display-4">Mini Project Razor Pages</h1>
                 <p class="lead">
-                    در این بخش به آموزش Razor Pages در ASP.NET Core 5 به زبان ساده و به همراه یک مثال کاربردی می
-                    پردازیم.
+تمرین برای ساخت یک بلاگ ساده برای یادگیری Razor Page
                 </p>
             </div>
         </div>
@@ -51,8 +50,7 @@
 
     <footer class="bg-dark mt-5">
         <div class="text-center text-light py-3">
-            تمامی حقوق برای
-            <a href="http://www.atriya.com" target="blank"> آتریا</a> محفوظ است.
+            <p>Razor Page</p>
         </div>
     </footer>
 
